--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width">
   <title>StarParam Testing</title>
   <link rel="stylesheet" href="node_modules/qunitjs/qunit/qunit.css">
-  <link rel="stylesheet" href="test/setup.css">
+  <style>
+  #autorun:hover {
+    cursor: pointer;
+  }
+  </style>
 </head>
 <body>
   <div>
