--- a/index.html
+++ b/index.html
@@ -3,27 +3,103 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>StarParam Testing</title>
-  <link rel="stylesheet" href="node_modules/qunitjs/qunit/qunit.css">
+  <title>StarParam</title>
   <style>
-  #autorun:hover {
-    cursor: pointer;
+  body {
+    padding: 0 10px;
+  }
+  section {
+    border-left: 1px solid silver;
+    margin-top: 40px;
+    padding: 0 10px;
+  }
+  h1 > a {
+    text-decoration: none;
+  }
+  h2 {
+    margin-bottom: 3px;
+  }
+  #dynamicbuttons {
+    margin-top: 3px;
+  }
+  #dynamicbuttons>button {
+    margin-right: 3px;
   }
   </style>
 </head>
 <body>
-  <div>
-  Note: to prevent the qUnit tests from auto-running: <code id="autorun">?autorun=false</code>.
-  The tests will override url settings
-  </div>
+  <h1><a href="./">StarParam</a></h1>
 
-  <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
+  <section id="add">
+    <h2>Add URL Parameters</h2>
+    <input value="foo" />
+    <input value="bar" />
+    <button>add</button>
+    <button>random</button>
+  </section>
 
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="node_modules/qunitjs/qunit/qunit.js"></script>
+  <section id="remove">
+    <h2>Remove URL Parameters</h2>
+    <input value="" />
+    <button>remove</button>
+    <div id="dynamicbuttons"></div>
+  </section>
+
+  <br />
+  <br />
+
+  <a href="https://github.com/jonbri/starparam">https://github.com/jonbri/starparam</a>
+
   <script src="./src/starparam.js"></script>
-  <script src="test/tests.js"></script>
-  <script src="test/setup.js"></script>
+
+<script>
+var aRandomWords = [
+  'foo', 'bar', 'baz',
+  'jan', 'feb', 'march',
+  'mercury', 'venus', 'earth',
+  'john', 'jane', 'phil'
+];
+
+var addButton = document.querySelectorAll('#add>button')[0],
+  addRandomButton = document.querySelectorAll('#add>button')[1],
+  addInputName = document.querySelectorAll('#add>input')[0],
+  addInputValue = document.querySelectorAll('#add>input')[1],
+  removeButton = document.querySelector('#remove>button'),
+  removeInputName = document.querySelectorAll('#remove>input')[0];
+
+addButton.onclick = function() {
+  starparam.add(addInputName.value, addInputValue.value);
+  updateRemoveOptions();
+};
+
+addRandomButton.onclick = function() {
+  function getRandomWord() {
+    return aRandomWords[Math.floor(Math.random() * (aRandomWords.length-1)) + 1];
+  }
+  addInputName.value = getRandomWord();
+  addInputValue.value = getRandomWord();
+};
+
+removeButton.onclick = function() {
+  starparam.remove(removeInputName.value);
+  updateRemoveOptions();
+};
+
+function updateRemoveOptions() {
+  var removeContainer = document.getElementById('dynamicbuttons');
+  removeContainer.innerHTML = '';
+  starparam.parse().params.forEach(function(oParam) {
+    var button = document.createElement('button');
+    button.innerHTML = 'Remove "' + oParam.name + '"';
+    button.onclick = function() {
+      starparam.remove(oParam.name);
+      updateRemoveOptions();
+    };
+    removeContainer.appendChild(button);
+  });
+}
+updateRemoveOptions();
+</script>
+
 </body>
 </html>
