simplify folder structure

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <a href="https://github.com/jonbri/starparam">https://github.com/jonbri/starparam</a>
 
-  <script src="./src/starparam.js"></script>
+  <script src="./starparam.js"></script>
 
 <script>
 var aRandomWords = [
