--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
 
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/qunitjs/qunit/qunit.js"></script>
-  <script src="./src/starparam.js"></script>
-  <script src="test/tests.js"></script>
+  <script src="./starparam.js"></script>
+  <script src="./tests.js"></script>
 </body>
 </html>
